# QA-Agent-forge

./: .env.example  .gitignore  README.md  pyproject.toml
agent_core/: AGENTS.md  README.md
agent_core/Infrastructure/prd/: parser_md_prd.py  prd_page_extract.py  rag_pre_processor.py  standardization_prd_md.py
agent_core/agents/: __init__.py  base.py
agent_core/agents/prd_review/: __init__.py  agent.py  ambiguity_reviewer.py  base_reviewer.py  boundary_value_reviewer.py  context_builder.py  logic_closure_reviewer.py
agent_core/common/: content_utils.py  env_config.py  file_utils.py  json_utils.py  llm_result_validate_util.py  logging_config.py  prd_node_utils.py  test_utils.py  tree_utils.py
agent_core/llm/: base.py
agent_core/models/prd/: __init__.py  expanded_md_node.py  md_image_ref.py  md_node.py  page_ref.py  prd_image_type.py  prd_insert_vector_db_flow_result.py  prd_normalization_result.py  prd_parser_img_model.py  prd_pipeline_context.py  prd_review_agent_input.py  prd_review_agent_result.py  prd_review_models.py  prd_semantic_block.py  prd_vector_record.py
agent_core/prompts/prd/: enrichment_prd_prompt.py  parser_md_prompt.py  (+2 more)
agent_core/test/: test_logging_config.py  test_prd.md
agent_core/workflows/: prd_cleaning_pipeline.py  prd_insert_vector_db_flow.py  prd_review_flow.py
backend/: AGENTS.md  CLAUDE.md  README.md  __init__.py
backend/app/: main.py
backend/tests/: test_health.py  test_source_crud.py
frontend/: AGENTS.md  index.html  package.json
memory/: image_semantic_2026_6_21.json  prd_cleaning_enrichment_dcb8299d7a9f497da59a03e027e4dee0.json  prd_cleaning_semantic_noise_removal_2026_6_22_1.json
(+34 files in other folders)
