[project]
name = "qa-agent-forge"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "dacite==1.9.2",
    "langchain==1.3.9",
    "langchain-openai==1.3.2",
    "python-dotenv==1.2.2",
    "structlog==26.1.0",
]

[tool.uv.sources]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent_core"]
