[project]
name = "qa-agent-forge"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "dacite==1.9.2",
    "langchain==1.3.9",
    "langchain-openai==1.3.2",
    "markdown-it-py>=4.2.0",
    "milvus-lite>=3.0",
    "pymilvus==3.0.0",
    "python-dotenv==1.2.2",
    "structlog==26.1.0",
]

[tool.uv.sources]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent_core"]
