[project]
name = "qa-agent-forge"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "dacite==1.9.2",
    "fastapi>=0.115.0",
    "httpx[socks]>=0.28.0",
    "langchain==1.3.9",
    "langchain-openai==1.3.2",
    "markdown-it-py>=4.2.0",
    "milvus-lite>=3.0",
    "pymilvus==3.0.0",
    "pymysql>=1.1,<2",
    "python-dotenv==1.2.2",
    "sqlalchemy>=2.0,<3",
    "structlog==26.1.0",
    "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.3.0",
]

[tool.uv.sources]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent_core", "backend"]
